@@ -1,3 +1,7 @@
+2009-11-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* EditLaneFile.aspx: Add support for C[PLUS]_INCLUDE_PATH.
+
 2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* ViewHtmlReport.aspx.cs: Fix typo in redirect link.
