@@ -1,3 +1,7 @@
+2009-11-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* Configuration.cs: Add support for C[PLUS]_INCLUDE_PATH.
+
 2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* FileUtilities.cs: If gzunzip didn't finish in time and we fail to
